# gold-coast

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT-STATUS.md  GOAL.md  README.md  goal-state.json
.jks/: call-transcription-artifact-contract-evidence.md  call-transcription-backfill-evidence.md  call-transcription-curated-smoke-evidence.md  call-transcription-engine-evidence.md  call-transcription-final-acceptance-evidence.md  call-transcription-observability-athena-docs-evidence.md  call-transcription-observability-final-report.md  call-transcription-observability-live-acceptance-evidence.md  call-transcription-observability-runtime-evidence.md  call-transcription-observability-terraform-evidence.md  call-transcription-observability-verification-evidence.md  call-transcription-runtime-infra-evidence.md  call-transcription-sample-evidence.md  call-transcription-setup-evidence.md  gold-coast-data-lake-v1-1-incremental-correction-evidence.md  slice-1-monorepo-refactor-evidence.md  (+14 more)
apps/data-lake/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/data-lake/scripts/: build_curated_tables.py  ghl_extract_raw.py
apps/data-lake/src/gold_coast_data_lake/: __init__.py  alerts.py  batch.py  client.py  config.py  curated.py  extractor.py  raw_refresh.py  smoke.py  storage.py  transcription.py
apps/data-lake/src/gold_coast_data_lake/jobs/: __init__.py  ghl_batch_refresh.py  ghl_call_transcription.py
apps/data-lake/tests/: test_alerts.py  test_batch.py  test_curated.py  test_extractor.py  test_raw_refresh.py  test_smoke.py  test_transcription.py
(+265 files in other folders)
