[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gold-coast-data-lake"
version = "0.1.0"
description = "Read-only source ingest and curated table tooling for the Gold Coast data lake"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "openai>=1.0",
  "pyarrow>=15",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
